I have started making a nav bar

--- a/NAV BAR/RRA NAV BAR/index.html
+++ b/NAV BAR/RRA NAV BAR/index.html
@@ -1,34 +1,324 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RRA NAVBAR</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rwanda Revenue Authority</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="nav">
-            <ul>
-                <li><a href="#">HOME</a>
-                    <ul>
-                        <li><a href="#">The Commissioner general</a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
+        <nav>
+            <ul class="province">
+                <li>
+                    <a href="#">Province 1
+                        <ul class="district">
+                            <li>
+                                <a href="#">Districts 1
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 2
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 3
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 4
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 5
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                        </ul>
+                    </a>
                 </li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">DOMESTIC SERVICES</a></li>
-                <li><a href="#">CUSTOMS SERVICES</a></li>
-                <li><a href="#">DISTRICT REVENUE</a></li>
-                <li><a href="#">RWANDA TRADE PORTAL</a></li>
-                <li><a href="#">CONTACT US</a></li>
+                <li>
+                    <a href="#">Province 2
+                        <ul class="district">
+                            <li>
+                                <a href="#">Districts 1
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 2
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 3
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 4
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 5
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Province 3
+                        <ul class="district">
+                            <li>
+                                <a href="#">Districts 1
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 2
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 3
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 4
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 5
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Province 4
+                        <ul class="district">
+                            <li>
+                                <a href="#">Districts 1
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 2
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 3
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 4
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 5
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Province 5
+                        <ul class="district">
+                            <li>
+                                <a href="#">Districts 1
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 2
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 3
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 4
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Districts 5
+                                    <ul class="sector">
+                                        <li><a href="#">Sector 1</a></li>
+                                        <li><a href="#">Sector 2</a></li>
+                                        <li><a href="#">Sector 3</a></li>
+                                        <li><a href="#">Sector 4</a></li>
+                                        <li><a href="#">Sector 5</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
             </ul>
-        </div>
+        </nav>
     </div>
-</body>
+    </div>
+  </body>
 </html>
